# xxcmd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build  build.py  manpage.md  pyproject.toml  re  xx.1
.github/workflows/: python-package.yml
docs/: man.src.md  manpage.md  xx.1  xx.h2m  xx.txt
tests/: mockcurses.py  test_cmdmanager.py  test_config.py  test_dbitem.py  test_lineedit.py  testdb  testdb2
xxcmd/: __init__.py  __main__.py  cmdmanager.py  config.py  consoleui.py  dbitem.py  lineedit.py  main.py
